# regmed-bot

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  ask.py  check_docs.py  create_collection.py  deepseek_test.py  docker-compose.yml  gost_parser.py  gost_selenium.py  load_docs.py  main.py  pyproject.toml  rename_gosts.py  search_test.py  test.py  testtest.py  upload_test.py
docs/: ГОСТ 13485.docx  Регистрация ИМН СОП по ООК 2010 от 2.12.10.doc  для ЕАЭС класс риска 3.docx
domain/: auth_service.py  rag_service.py
infrastructure/database/: supabase_client.py
infrastructure/database/auth/: supabase_auth.py
presentation/telegram/handlers/: access_request.py  admin.py  gost_list.py  questions.py
presentation/telegram/middlewares/: access.py
presentation/web/: auth.py  fast_api_main.py
presentation/web/static/: script.js  style.css
presentation/web/templates/: index.html
presentation/web/templates/auth/: login.html  register.html  reset_password.html
scripts/: init_db.py
