[project]
name = "regmed-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "supabase>=2.27.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2==3.1.4",
    "starlette==0.41.3",
    "pdfplumber>=0.10.3",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
]